# thelinkbox

./: .gitignore  ChangeLog  Makefile.am  README  README.CVS  README.git  README.md  SCRIPTING.txt  TODO  bootstrap.sh  cm108.conf.sample  configure  configure.in  iMic.conf.sample  irlp.conf.sample  port.conf.sample  rigblaster.conf.sample  tlb.cmds.sample  tlb.conf.sample  voip.conf.sample  wb2rem.conf.sample
CVS/: Entries  Repository
Debian/: install  tlb  uninstall
FreeBSD/: install  tlb.sh  uninstall
FreeBSD/CVS/: Entries  Repository
RedHat/: install  tlb  uninstall
RedHat/CVS/: Entries  Repository
adpcm/: Makefile.am  README.1ST  adpcm.c  adpcm.h  copyright
adpcm/CVS/: Entries  Repository
common/: Makefile.am  avl.c  configfile.c  main.c  ntservice.c
common/CVS/: Entries
gsm/: Makefile.am  README.1ST  gsm.dsp
gsm/CVS/: Entries  Repository
gsm/inc/: Makefile.am  config.h.win32  gsm.h  private.h  proto.h  toast.h  unproto.h
gsm/inc/CVS/: Entries  Repository
gsm/src/: Makefile.am  add.c  code.c  config.h.win32  debug.c  decode.c  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_explode.c  gsm_implode.c  gsm_option.c  gsm_print.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c
gsm/src/CVS/: Entries  Repository
hrprof/: Makefile.am  Makefile.orig  README  README.1ST  hrprof.c  tprog.c
hrprof/CVS/: Entries  Repository
inc/: Makefile.am  avl.h  common.h  configfile.h  ilink.h  main.h  ntservice.h  rtp.h  sf.h  tbd.h  tbdthread_common.h
inc/CVS/: Entries
linkbox/: Ctext.cpp  Ctext.h  Makefile.am  ToneGen.cpp  ToneGen.h  configvars.cpp  ctcss.c  ctcss.h  devices.cpp  devices.h  devinput.cpp  devinput.h  dh.cpp  filters.cpp  filters.h  linkbox.h  nodes.cpp  nodes.h  ports.cpp  ports.h  radio_ctrl.h  ulaw.c  ulaw2linear.h  usbdev.cpp  usbdev.h  voip.cpp  voip.h
linkbox/CVS/: Entries  Repository
openwrt/CVS/: Repository
scripts/: Makefile.am  README  freqctrl.sh  getnews.sh  phonetic.ansi  phonetic.ham  phonetic.us  prefix.sh  regen.cmds  regen.sh  saytime.sh  tlbevent.sh  usermgmt.cgi  voiceid.sh
scripts/CVS/: Entries  Repository
socket/: ServerSocket.cpp  ServerSocket.h  Socket.cpp
socket/CVS/: Entries  Repository
soundmodem/: AUTHORS  ChangeLog  Makefile.am  README  README.1ST  ax25.c  costab.c  costab.h  modem.c  modem.h
soundmodem/CVS/: Entries  Repository
spandsp/: Makefile.am  README  README.1ST  bit_operations.h  bitstream.c  bitstream.h  dc_restore.h  dtmf.c  dtmf.h  g711.h  g726.c  g726.h  super_tone_rx.h  telephony.h  tone_detect.c  tone_detect.h  tone_generate.h
spandsp/CVS/: Entries  Repository
src/: Makefile.am  avrs.c  avrs.h  conference.c  conference.h  configvars.c  configvars.h  dirclient.c  dirclient.h  eventhook.c  eventhook.h  hostfile.c  hostfile.h  thebridge.c  users.c  users.h
src/CVS/: Entries  Repository
thebridge/: README
thebridge/CVS/: Entries  Repository
tlbcmd/: Makefile.am  tbdcmd.c  tbdcmd.dsp
tlbcmd/CVS/: Entries  Repository
zlib/: Makefile.am  README.1ST  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
zlib/CVS/: Entries
