# $Log: Makefile.am,v $
# Revision 1.2  2008/12/17 17:28:08  wb6ymh
# Added EXTRA_DIST.
#
# Revision 1.1  2007/06/29 23:18:15  wb6ymh
# Initial import - adpcm library for cqinet apps.
#
#

EXTRA_DIST = copyright readme README.1ST

noinst_LIBRARIES = libadpcm.a

libadpcm_a_SOURCES = adpcm.c adpcm.h

AM_CPPFLAGS = -I$(top_srcdir)
AM_CFLAGS = -Wall 


