# $Log: Makefile.am,v $
# Revision 1.3  2007/11/26 06:57:10  wb6ymh
# Added inc to SUBDIRS.
#
# Revision 1.2  2002/11/17 16:49:46  wb6ymh
# Removed items from EXTRA_DIST that don't exist, added README.1ST.
#
# Revision 1.1.1.1  2002/10/06 16:40:27  wb6ymh
# Initial import - GSM library from Speak Freely.  See README.1ST for details.
#
#

EXTRA_DIST = copyright readme gsm.dsp README.1ST

SUBDIRS = src inc

