# $Log: Makefile.am,v $
# Revision 1.3  2007/07/02 13:37:21  wb6ymh
# Added tbdthread_common.h to EXTRA_DIST.
#
# Revision 1.2  2002/12/18 00:52:15  wb6ymh
# Added ntservice.h.
#
# Revision 1.1  2002/11/03 15:53:03  wb6ymh
# Initial commit.
#

EXTRA_DIST = avl.h common.h configfile.h ilink.h main.h rtp.h sf.h tbd.h \
             ntservice.h tbdthread_common.h

