# $Log: Makefile.am,v $
# Revision 1.5  2010/03/13 15:03:41  wb6ymh
# Added saytime.sh example.
#
# Revision 1.4  2008/08/02 18:50:57  wb6ymh
# Added voiceid.sh.
#
# Revision 1.3  2008/06/26 20:40:09  wb6ymh
# Added README, freqctrl.sh prefix.sh regen.cmds regen.sh.
#
# Revision 1.2  2008/05/14 18:29:44  wb6ymh
# Added phonetic.us, phonetic.ansi, phonetic.ham, usermgmt.cgi.
#
# Revision 1.1  2008/01/28 15:49:08  wb6ymh
# Inital import - cron job to download and reformat the weekly Amateur Radio
# Newsline report for playback by thelinkbox.
#

EXTRA_DIST = getnews.sh phonetic.us phonetic.ansi phonetic.ham usermgmt.cgi \
             README freqctrl.sh prefix.sh regen.cmds regen.sh voiceid.sh \
	     saytime.sh

