# $Log: Makefile.am,v $
# Revision 1.1.1.1  2003/08/10 16:10:40  wb6ymh
# Initial import Zlib 1.1.4 (just to make things easier for people to build
# CQiNet apps).
#
#

EXTRA_DIST = README.1ST zlib.html

noinst_LIBRARIES = libzlib.a

libzlib_a_SOURCES = adler32.c compress.c crc32.c deflate.c gzio.c infblock.c \
		    infcodes.c inffast.c inflate.c inftrees.c infutil.c \
		    trees.c uncompr.c zutil.c deflate.h infblock.h infcodes.h \
                    inffast.h inffixed.h inftrees.h infutil.h trees.h zconf.h \
                    zlib.h zutil.h

AM_CFLAGS = -Wall 


